tests pass after fixing pi node oopsies.